Factor out card titles into subtemplate

--- a/views/layouts/steps.gohtml
+++ b/views/layouts/steps.gohtml
@@ -19,9 +19,7 @@
                                 </svg>
                             </div>
                             <div class="card-content">
-                                <h4 class="title is-size-5 is-family-secondary has-text-centered">
-                                    Connect to Spotify
-                                </h4>
+                                {{template "cardTitle" "Connect to Spotify"}}
                                 <p class="card__copy is-size-6">
                                     When you're ready to give Discover Now a try, you'll be redirected to Spotify where you can log into your account. Once you're logged in, we'll take care of the rest.
                                 </p>
@@ -40,9 +38,7 @@
                                 </svg>
                             </div>
                             <div class="card-content">
-                                <h4 class="title is-size-5 is-family-secondary has-text-centered">
-                                    Analyze your interests
-                                </h4>
+                                {{template "cardTitle" "Analyze your interests"}}
                                 <p class="card__copy is-size-6">
                                     Our algorithm will analyze your listening habits to generate your personalized playlist. Inside, you'll find artists we think you'll love but just haven't connected with yet.
                                 </p>
@@ -63,9 +59,7 @@
                                 </svg>
                             </div>
                             <div class="card-content">
-                                <h4 class="title is-size-5 is-family-secondary has-text-centered">
-                                    Discover new music
-                                </h4>
+                                {{template "cardTitle" "Discover new music"}}
                                 <p class="card__copy is-size-6">
                                     Your Discover Now playlist is then added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again.
                                 </p>
