--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -19,9 +19,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Log in simply and securely"}}
-                                <p class="card__copy is-size-6">
-                                    You have more than enough accounts and passwords to worry about. Simply connect to your existing Spotify account and we'll take care of the rest.
-                                </p>
+                                {{template "cardText" "You have more than enough accounts and passwords to worry about. Simply connect to your existing Spotify account and we'll take care of the rest."}}
                             </div>
                         </div>
                     </div>
@@ -38,10 +36,8 @@
                                 </svg>
                             </div>
                             <div class="card-content">
-                               {{template "cardTitle" "Enjoy with no strings attached"}}
-                                <p class="card__copy is-size-6">
-                                    Discover new music for free. We don't advertise, analyze, or as for a subscription. All we ask is for you to share and enjoy your experience of discovery.
-                                </p>
+                                {{template "cardTitle" "Enjoy with no strings attached"}}
+                                {{template "cardText" "Discover new music for free. We don't advertise, analyze, or as for a subscription. All we ask is for you to share and enjoy your experience of discovery."}}
                             </div>
                         </div>
                     </div>
@@ -63,9 +59,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Discover anytime and anywhere"}}
-                                <p class="card__copy is-size-6">
-                                    Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is only a tap or click away.
-                                </p>
+                                {{template "cardText" "Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is only a tap or click away."}}
                             </div>
                         </div>
                     </div>
@@ -83,9 +77,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Explore the open source code"}}
-                                <p class="card__copy is-size-6">
-                                    The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we handle your data and keep discovery ticking.
-                                </p>
+                                {{template "cardText" "The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we handle your data and keep discovery ticking."}}
                             </div>
                         </div>
                     </div>
