--- a/views/layouts/steps.gohtml
+++ b/views/layouts/steps.gohtml
@@ -20,9 +20,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Connect to Spotify"}}
-                                <p class="card__copy is-size-6">
-                                    When you're ready to give Discover Now a try, you'll be redirected to Spotify where you can log into your account. Once you're logged in, we'll take care of the rest.
-                                </p>
+                                {{template "cardText" "When you're ready to give Discover Now a try, you'll be redirected to Spotify where you can log into your account. Once you're logged in, we'll take care of the rest."}}
                             </div>
                         </div>
                     </div>
@@ -39,9 +37,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Analyze your interests"}}
-                                <p class="card__copy is-size-6">
-                                    Our algorithm will analyze your listening habits to generate your personalized playlist. Inside, you'll find artists we think you'll love but just haven't connected with yet.
-                                </p>
+                                {{template "cardText" "Our algorithm will analyze your listening habits to generate your personalized playlist. Inside, you'll find artists we think you'll love but just haven't connected with yet."}}
                             </div>
                         </div>
                     </div>
@@ -60,9 +56,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Discover new music"}}
-                                <p class="card__copy is-size-6">
-                                    Your Discover Now playlist is then added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again.
-                                </p>
+                                {{template "cardText" "Your Discover Now playlist is then added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again."}}
                             </div>
                         </div>
                     </div>
