--- a/views/results.gohtml
+++ b/views/results.gohtml
@@ -6,14 +6,7 @@
                     {{if .URI}}
                         {{template "resultHeader" "Success!"}}
                         {{template "resultSubheader" "Something you'll love is waiting for you on your preferred Spotify player."}}
-                        <a class="button is-primary is-rounded">
-                            <span class="icon">
-                                <i class="far fa-play-circle fa-lg"></i>
-                            </span>
-                            <span class="button__text is-family-monospace">
-                                Preview
-                            </span>
-                        </a>
+                        {{template "button" . | arg "Text" "Preview" | arg "Icon" "far fa-play-circle fa-lg" | arg "Class" "button is-primary is-rounded" | arg "Href" ""}}
                     {{else}}
                         {{template "resultHeader" "Uh oh..."}}
                         {{template "resultSubheader" "We couldn't find enough data to generate your playlist."}}
