--- a/views/layouts/resultHeader.gohtml
+++ b/views/layouts/resultHeader.gohtml
@@ -1,5 +1,5 @@
 {{define "resultHeader"}}
-    <h1 class="title is-size-1 is-family-secondary">
+    <h1 class="is-size-0 has-text-grey-darker has-text-weight-light is-family-secondary">
         {{.}}
     </h1>
 {{end}}
