--- a/views/layouts/resultSubheader.gohtml
+++ b/views/layouts/resultSubheader.gohtml
@@ -1,5 +1,5 @@
 {{define "resultSubheader"}}
-    <h2 class="title has-text-grey-dark">
+    <h2 class="title is-size-3 has-text-weight-light is-family-secondary">
         {{.}}
     </h2>
 {{end}}
