--- a/sass/settings/init.scss
+++ b/sass/settings/init.scss
@@ -89,3 +89,7 @@ $footer-padding: 3rem 1.5rem;
 .is-size-0 {
   font-size: $size-0 !important;
 }
+
+.is-spaced {
+  padding-bottom: 1rem !important;
+}
