--- a/views/results.gohtml
+++ b/views/results.gohtml
@@ -9,11 +9,20 @@
                         {{template "button" . | arg "Text" "Preview" | arg "Icon" "far fa-play-circle fa-lg" | arg "Class" "button is-dark is-rounded is-outlined" | arg "Href" ""}}
                     {{else}}
                         {{template "resultHeader" "Uh oh..."}}
-                        {{template "resultSubheader" "We couldn't find enough data to generate your playlist."}}
+                        {{template "resultSubheader" "We couldn't find enough data to generate your playlist - try again after listening to some music."}}
                     {{end}}
                 </div>
             </div>
-            {{template "footer"}}
+            <div class="hero-foot">
+                <div class="container has-text-centered">
+                    {{if .URI}}
+                        {{template "resultTip" "Come back after you've listened to some more music, we'll have a completely new playlist for you."}}
+                    {{else}}
+                        {{template "resultTip" "If this problem persists, please contact discovernow@protonmail.com."}}
+                    {{end}}
+                </div>
+                {{template "footer"}}
+            </div>
         </div>
     </section>
 {{end}}
