Add smooth scroll on button click

--- a/views/layouts/landing.gohtml
+++ b/views/layouts/landing.gohtml
@@ -14,7 +14,7 @@
                         {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
                     </div>
                     <div>
-                        <a class="anchor">
+                        <a class="anchor" onclick="smoothScroll('features')">
                             <span class="is-size-5 is-underlined is-family-monospace">
                                 Learn more
                             </span>
