Add modal toggle event listener to modal background

--- a/views/results.gohtml
+++ b/views/results.gohtml
@@ -15,7 +15,7 @@
                             </span>
                         </a>
                         <div class="modal" id="widget">
-                            <div class="modal-background"></div>
+                            <div class="modal-background" onclick="toggleModal('widget')"></div>
                             <div class="modal-content">
                                 <iframe src="https://open.spotify.com/embed?uri={{.URI}}"
                                         allowtransparency="true"
