--- a/views/layouts/landing.gohtml
+++ b/views/layouts/landing.gohtml
@@ -3,7 +3,7 @@
         <div class="hero-body">
             <div class="container">
                 <div class="splash">
-                    <h2 class="splash__subheader is-family-secondary has-text-weight-medium is-size-3">
+                    <h2 class="splash__subheader is-family-secondary has-text-grey-dark has-text-weight-medium is-size-3">
                         Don't wait for Monday.
                     </h2>
                     <h1 class="splash__header title is-family-code has-text-weight-bold is-size-0">
@@ -14,7 +14,7 @@
                         {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
                     </div>
                     <div>
-                        <a class="anchor" onclick="smoothScroll('features')">
+                        <a class="anchor has-text-grey-dark" onclick="smoothScroll('features')">
                             <span class="is-size-5 is-underlined is-family-monospace">
                                 Learn more
                             </span>
