Add padding to the bottom of hero subtitles

--- a/views/layouts/heroSubtitle.gohtml
+++ b/views/layouts/heroSubtitle.gohtml
@@ -1,5 +1,5 @@
 {{define "heroSubtitle"}}
-    <h3 class="subtitle has-text-grey is-family-secondary">
+    <h3 class="subtitle is-spaced has-text-grey is-family-secondary">
         {{.}}
     </h3>
 {{end}}
